# library_input_check

./: ListOfFunctions.md  README.md
inputCheck/: CMakeLists.txt  inputCheck.cpp  inputCheck.h
